--- a/.github/workflows/cypress-test.yml
+++ b/.github/workflows/cypress-test.yml
@@ -24,7 +24,4 @@ jobs:
         run: npm ci
 
       - name: Run Cypress Tests
-        uses: cypress-io/github-action@v2
-        with:
-          browser: chrome
-          headless: true
+        run: npm run cypress:run
